--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
                 <div class="container">
                     <div class="row m-0 p-0 pt-2">
                         <div class="col-md-2 logo text-left">
-                            <h1><a href="index.html"><img src="images/logo-phukien.png" alt="" class="img-fluid"></a>
+                            <h1><a href="index.html"><img src="images/logo-top.png" alt="" class="img-fluid"></a>
                             </h1>
                         </div>
                         <div class="col-md-4 search text-center mt-3"><input type="text"
@@ -228,7 +229,7 @@
         </section>
         <!-- end -->
 
-        <section>
+        <section style="background: #f0f0f0">
             <div class="product-top">
                 <div class="container">
                     <h1>Sản phẩm mới</h1>
@@ -357,8 +358,6 @@
                     <!-- <a href="">Xem Thêm</a> -->
                 </div>
             </div>
-        </section>
-        <section>
             <div class="product-wholesale-price">
                 <div class="container">
                     <h1>Sản phẩm giá buôn</h1>
@@ -529,7 +528,7 @@
         </footer>
         <div class="cptr">
             <div class="container">
-                <p class="m-0 pt-1 pb-1 text-right">Bản quyền thuộc về <a href=""
+                <p class="m-0 pt-1 pb-1 text-right">© Bản quyền thuộc về <a href=""
                         style="font-weight:bold; color: #000000; ">Phụ kiện giá buôn</a> | Cung cấp bởi <a
                         style="font-weight:bold;" href="">PTB Team</a> </p>
             </div>
