--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <div class="footer">
                 <div class="container">
                     <div class="row m-0 pt-4 pb-4">
-                        <div class="col-md-2">
+                        <div class="col-md-2 lg-ft">
                             <a href=""><img src="images/logo-phukien.png" alt="" class="img-fluid"></a>
                         </div>
                         <div class="col-md-4">
