--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/css plugin/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="font/font.css">
+    <link rel="stylesheet" href="css/css plugin/jquery.mobile-menu.css">
+    <link rel="stylesheet" href="css/css plugin/site-icons.css">
+    <link rel="stylesheet" href="css/css plugin/style1.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -49,8 +52,83 @@
                             <div class="check-card"> <a href="">0</a></div>
                         </div>
                     </div>
+
+                    <!-- menu-mobile -->
+
+                    <!-- <div class="line-top"></div> -->
+                    <div class="clear-fix"></div>
                 </div>
-                <div class="line-top"></div>
+                <div id="overlay"></div>
+                <div id="page">
+                    <div class="mm-toggle-wrap">
+                        <div class="mm-toggle">
+                            <i class="fa fa-bars" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                    <div class="container">
+                    </div>
+                </div>
+                <div id="mobile-menu">
+                    <ul>
+                        <li>
+                            <div class="mm-search">
+                                <form id="search" name="search">
+                                    <div class="input-group">
+                                        <div class="input-group-btn">
+                                            <button class="btn btn-default" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                                           
+                                        </div>
+                                        <input type="text" class="form-control simple" placeholder="Search ..."
+                                            name="srch-term" id="srch-term">
+
+                                    </div>
+                                </form>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="home">
+                                <a href="#"> Trang chủ</a>
+                            </div>
+                        </li>
+                        <li><a href="#">sản phẩm</a>
+                            <ul>
+                                <li><a href="#">miếng dán cường lực</a>
+                                    <ul>
+                                        <li><a href="#">cường lực iphone</a></li>
+                                        <li><a href="#">cường lực samsung</a></li>
+                                        <li><a href="#">cường lực nokia</a></li>
+                                        <li><a href="#">cường lực xiaomi</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">cóc sạc</a>
+                                    <ul>
+                                        <li><a href="#">cóc sạc iphone</a></li>
+                                        <li><a href="#">cóc sạc samsung</a></li>
+                                        <li><a href="#">cóc sạc nokia</a></li>
+                                        <li><a href="#">cóc sạc xiaomi</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">tai nghe</a>
+                                    <ul>
+                                        <li><a href="#">tai nghe iphone</a></li>
+                                        <li><a href="#">tai nghe samsung</a></li>
+                                        <li><a href="#">tai nghe nokia</a></li>
+                                        <li><a href="#">tai nghe xiaomi</a></li>
+                                    </ul>
+                                </li>
+                        </li>
+                    </ul>
+                    </li>
+                    <li><a href="#">Bảng giá</a>
+                    </li>
+                    <li><a href="#">Ưu đãi</a>
+                    </li>
+                    <li><a href="#">liên hệ</a>
+                    </li>
+                    <li><a href=""></a> <h1 class="text-center"><a href="index.html"><img src="images/logo-top.png" alt="" class="img-fluid"></a>
+                    </h1></li>
+                    </ul>
+                </div>
             </div>
             <div class="nav">
                 <div class="container">
@@ -198,10 +276,11 @@
                     </nav>
                 </div>
             </div>
+
+
         </header>
         <!-- end-header -->
         <!-- banner -->
-        <div class="line-top"></div>
         <div class="banner">
             <div class="owl-carousel owl-theme">
                 <div class="item"><img src="images/banner.png" alt=""></div>
@@ -234,7 +313,7 @@
                 <div class="container">
                     <h1>Sản phẩm mới</h1>
                     <div class="row m-0 p-0">
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4  text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -246,7 +325,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -258,7 +337,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -270,7 +349,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -282,7 +361,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -294,7 +373,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -306,7 +385,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -318,7 +397,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -330,7 +409,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -342,7 +421,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-md-2 fix-width">
+                        <div class="col-md-2 col-sm-6 fix-width">
                             <a href="">
                                 <div class="card mt-2 mb-4 text-left">
                                     <img class="card-img-top" src="images/product-1.png" alt="">
@@ -514,7 +593,7 @@
                                 <a href="">Chủ tài khoản: <span>tribi331@gmail.com</span></a>
                             </div>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2 text-center">
                             <span style="font-weight:bold; text-transform: uppercase;" class=" mt-3 d-block">Liên hệ
                                 chúng
                                 tôi</span>
@@ -541,6 +620,7 @@
     <script src="theme/bootstrap.min.js"></script>
     <script src="theme/bootstrap.bundle.min.js"></script>
     <script src="theme/pluggin/owl.carousel.min.js"></script>
+    <script src="theme/pluggin/jquery.mobile-menu.min.js"></script>
     <script>
         $('.owl-carousel').owlCarousel({
             loop: true,
@@ -566,6 +646,19 @@
             }
         })
     </script> -->
+    <script>
+        jQuery(document).ready(function ($) {
+            $("#mobile-menu").mobileMenu({
+                MenuWidth: 250,
+                SlideSpeed: 300,
+                WindowsMaxWidth: 767,
+                PagePush: true,
+                FromLeft: false,
+                Overlay: true,
+                CollapseMenu: true,
+                ClassName: "mobile-menu"
+            });
+        });        
+    </script>
 </body>
-
 </html>
