--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="font/font.css">
     <link rel="stylesheet" href="css/css plugin/jquery.mobile-menu.css">
     <link rel="stylesheet" href="css/css plugin/site-icons.css">
-    <link rel="stylesheet" href="css/css plugin/style1.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -75,8 +74,9 @@
                                 <form id="search" name="search">
                                     <div class="input-group">
                                         <div class="input-group-btn">
-                                            <button class="btn btn-default" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                                           
+                                            <button class="btn btn-default" type="submit"><i class="fa fa-search"
+                                                    aria-hidden="true"></i></button>
+
                                         </div>
                                         <input type="text" class="form-control simple" placeholder="Search ..."
                                             name="srch-term" id="srch-term">
@@ -86,9 +86,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="home">
-                                <a href="#"> Trang chủ</a>
-                            </div>
+                            <a href="index.html"> Trang chủ</a>
                         </li>
                         <li><a href="#">sản phẩm</a>
                             <ul>
@@ -116,17 +114,16 @@
                                         <li><a href="#">tai nghe xiaomi</a></li>
                                     </ul>
                                 </li>
+                            </ul>
+                        <li><a href="#">Bảng giá</a>
                         </li>
-                    </ul>
-                    </li>
-                    <li><a href="#">Bảng giá</a>
-                    </li>
-                    <li><a href="#">Ưu đãi</a>
-                    </li>
-                    <li><a href="#">liên hệ</a>
-                    </li>
-                    <li><a href=""></a> <h1 class="text-center"><a href="index.html"><img src="images/logo-top.png" alt="" class="img-fluid"></a>
-                    </h1></li>
+                        <li><a href="#">Ưu đãi</a>
+                        </li>
+                        <li><a href="#">liên hệ</a>
+                        </li>
+                        <li class="logo-mb"><a href="#" class="text-center"><img src="images/logo-top.png"
+                                    alt="" class="img-fluid"></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -255,7 +252,8 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"> <i class="fa fa-home" aria-hidden="true"></i> Trang
+                                    <a class="nav-link" href="index.html"> <i class="fa fa-home" aria-hidden="true"></i>
+                                        Trang
                                         chủ</a>
                                 </li>
 
@@ -621,6 +619,7 @@
     <script src="theme/bootstrap.bundle.min.js"></script>
     <script src="theme/pluggin/owl.carousel.min.js"></script>
     <script src="theme/pluggin/jquery.mobile-menu.min.js"></script>
+    <script src="theme/main.js"></script>
     <script>
         $('.owl-carousel').owlCarousel({
             loop: true,
@@ -647,18 +646,8 @@
         })
     </script> -->
     <script>
-        jQuery(document).ready(function ($) {
-            $("#mobile-menu").mobileMenu({
-                MenuWidth: 250,
-                SlideSpeed: 300,
-                WindowsMaxWidth: 767,
-                PagePush: true,
-                FromLeft: false,
-                Overlay: true,
-                CollapseMenu: true,
-                ClassName: "mobile-menu"
-            });
-        });        
+
     </script>
 </body>
+
 </html>
