--- a/index.html
+++ b/index.html
@@ -627,6 +627,16 @@
                 </div>
             </div>
         </footer>
+        <button class="btn" id="back-to-top" style="display: block;">
+                <i class="fa fa-angle-up"></i>
+        </button>
+        <div class="phonering-alo-phone phonering-alo-green phonering-alo-show" id="phonering-alo-phoneIcon">
+                <div class="phonering-alo-ph-circle"></div>
+                 <div class="phonering-alo-ph-circle-fill"></div>
+                <a href="tel:+84976114345" class="pps-btn-img" title="Liên hệ">
+                 <div class="phonering-alo-ph-img-circle"></div>
+                 </a>
+                </div>
         <div class="cptr">
             <div class="container">
                 <p class="m-0 pt-1 pb-1 text-right">© Bản quyền thuộc về <a href="" style="font-weight:bold; color: #000000; ">Phụ kiện giá buôn</a> | Cung cấp bởi <a style="font-weight:bold;" href="">PTB Team</a> </p>
@@ -660,14 +670,8 @@
             }
         })
     </script>
-    <!-- <script>
-        $('.navbar-brand').mouseover(function () {
-            if ($('.lv2').css('display') == 'none') {
-                $('.lv2').css("display", "block","pointer-events","all");
-            }
-        })
-    </script> -->
     <script>
+        
     </script>
 </body>
 
