--- a/index.html
+++ b/index.html
@@ -610,7 +610,17 @@
                                 chúng
                                 tôi</span>
                             <div class="social">
-
+                                <ul>
+                                    <li class="facebook">
+                                        <a href=""></a>
+                                    </li>
+                                    <li class="zalo">
+                                        <a href=""></a>
+                                    </li>
+                                    <li class="youtube">
+                                        <a href=""></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
