--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@
                 </div>
             </div>
         </section>
+        <div class="line-footer"></div>
         <footer>
             <div class="footer">
                 <div class="container">
@@ -626,6 +627,7 @@
                     </div>
                 </div>
             </div>
+       
         </footer>
         <button class="btn" id="back-to-top" style="display: block;">
                 <i class="fa fa-angle-up"></i>
