--- a/lienhehoptac.html
+++ b/lienhehoptac.html
@@ -304,7 +304,7 @@
                                     <button class="" onclick="myFunction()">Đồng ý</button>
                                 </div>
                                 <div id="test" style="display:none">
-                                    <label for="">Số điện thoại hợp tác:</label> <a href="+84706426366">0706426366</a>
+                                    <label for="" style="font-size: 30px;">Số điện thoại hợp tác:</label> <a style="font-size: 30px; color:red;" href="+84706426366">0706426366</a>
                                 </div>
                             </div>
                         </div>
@@ -320,10 +320,9 @@
                         </div>
                     </div>
                     <div class="form2 d-flex justify-content-center">
-                        <p class="text-center">
-                            <ul>
-                                <li>Điều kiện: CÓ CÔNG NỢ</li>
-                                <li>Sản phẩm bảo hành bao lâu: <select class="d-inline-flex">
+                        <ul>
+                            <li>Điều kiện: CÓ CÔNG NỢ</li>
+                            <li>Sản phẩm bảo hành bao lâu: <select class="d-inline-flex">
                                             <option value="">1 Tháng</option>
                                             <option value="">2 Tháng</option>
                                             <option value="">3 Tháng</option>
@@ -340,12 +339,59 @@
                                             <option value="">36 Tháng</option>
                                             <option value="">Hoặc nhiều hơn</option>
                                           </select>
-                                </li>
-                                <li>Chế độ bảo hành của bạn như thế nào?
-                                    <p> <textarea style="width:300px; height:70px;" placeholder="vui lòng nhập chế độ bảo hành của bạn" name="" id="" cols="30" rows="10"></textarea></p>
-                                </li>
-                            </ul>
-                        </p>
+                            </li>
+                            <li>Chế độ bảo hành của bạn như thế nào?
+                                <p class="p-0 m-0"> <textarea style="width:300px; height:70px;" placeholder="vui lòng nhập chế độ bảo hành của bạn" name="" id="" cols="30" rows="10"></textarea></p>
+                            </li>
+                            <li>
+                                <div class="btn-check text-center d-flex
+                                justify-content-center">
+                                    <button class="">Tiếp tục</button>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="form3 mt-3 d-flex justify-content-center">
+                        <form style="width:50%;">
+                            <div class="form-row">
+                                <div class="form-group col-md-6 col-sm-6">
+                                    <label for="">Họ tên của bạn: </label>
+                                    <input type="text" class="form-control" id="" placeholder="Họ tên của bạn">
+                                    <label for="">Tên cửa hàng: </label>
+                                    <input type="text" class="form-control" id="" placeholder="Tên cửa hàng của bạn">
+                                    <label for="">Email: </label>
+                                    <input type="text" class="form-control" id="" placeholder="Nhập email của bạn">
+                                </div>
+                                <div class="form-group col-md-6 col-sm-6">
+                                    <label for="">Số điện thoại: </label>
+                                    <input type="text" class="form-control" id="" placeholder="Số điện thoại của bạn">
+                                    <label for="">Địa chỉ: </label>
+                                    <input type="text" class="form-control" id="" placeholder="Địa chỉ của bạn ở đâu">
+                                    <label for="">Sản phẩm bạn phân phối: </label>
+                                    <select style="width:100%;padding: 6px;    border: 1px solid #ced4da; border-radius: .25rem;">
+                                            <option value="">Chuột</option>
+                                            <option value="">Bàn phím</option>
+                                            <option value="">Tai nghe</option>
+                                            <option value="">Loa</option>
+                                            <option value="">Ốp lưng điện thoại</option>
+                                            <option value="">Sản phẩm khác</option>
+                                          </select>
+                                </div>
+                                <div class="form-group col-md-12">
+                                    <div class="note">
+                                        <label for="" style="font-size: 12px;"> <i style="color:red;    font-size: 20px;" class="fa fa-exclamation" aria-hidden="true"></i> Lưu ý: Sản phẩm không có trong danh mục bạn vui lòng nhập vào ô mô tả sản phẩm bên dưới.</label>
+                                    </div>
+                                    <label for="">Mô tả sản phẩm bạn phân phối: </label>
+                                    <textarea style="width: 100%; height: 70px;" placeholder="vui lòng nhập mô tả sơ bộ về sản phẩm mà bạn muốn phân phối cho chúng tôi" name="" id="" cols="30" rows="10"></textarea>
+
+                                </div>
+                            </div>
+
+                            <div class="btn-check text-center d-flex
+                                justify-content-center mb-4">
+                                <button class="">Gửi đăng ký</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -422,6 +468,10 @@
             }
         }
     </script>
+</body>
+
+</html> if (check.style.display === "none") { check.style.display = "block"; } else { check.style.display = "none"; } }
+</script>
 </body>
 
 </html>
