--- a/lienhehoptac.html
+++ b/lienhehoptac.html
@@ -361,6 +361,15 @@
                                     <input type="text" class="form-control" id="" placeholder="Tên cửa hàng của bạn">
                                     <label for="">Email: </label>
                                     <input type="text" class="form-control" id="" placeholder="Nhập email của bạn">
+                                    <label for="">Số lượng: </label>
+                                    <select style="width:100%;padding: 6px;    border: 1px solid #ced4da; border-radius: .25rem;">
+                                        <option value="">100</option>
+                                        <option value="">200</option>
+                                        <option value="">300</option>
+                                        <option value="">400</option>
+                                        <option value="">500</option>
+                                        <option value="">Hoặc nhiều hơn</option>
+                                      </select>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6">
                                     <label for="">Số điện thoại: </label>
